--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -28,10 +28,6 @@
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/6f560add72.js" crossorigin="anonymous"></script>
-
-    <!-- AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
 
 <body>
@@ -91,18 +87,18 @@
     </div>
 
     <!-- HEADER -->
-    <header class="p-3 stickyTop">
+    <header class="container-fluid py-3">
         <ul>
-            <li class="home">
+            <li>
                 <a href="#"><i class="fa-solid fa-house"></i>Home</a>
             </li>
-            <li class="activities">
+            <li>
                 <a href="#activities"><i class="fa-solid fa-bookmark"></i>Activities</a>
             </li>
-            <li class="certificate">
+            <li>
                 <a href="#certificate"><i class="fa-solid fa-award"></i>Certificate</a>
             </li>
-            <li class="eduexp">
+            <li>
                 <a href="#eduexp"><i class="fa-solid fa-graduation-cap"></i>Edu & Exp</a>
             </li>
         </ul>
@@ -115,7 +111,7 @@
 
     <div class="parent">
         <!-- HERO -->
-        <section class="container hero mt-3 mt-lg-0 py-3 d-flex flex-wrap justify-content-between" id="home">
+        <section class="container-lg container-fluid hero d-flex flex-wrap justify-content-between pt-5">
             <div class="left col-12 col-md-6 d-flex flex-column justify-content-between">
                 <div class="top">
                     <h2>My name is <br /> <b class="text-primary">Truong Quoc Khanh</b></h2>
@@ -149,10 +145,10 @@
         </section>
 
         <!-- ACTIVITIES -->
-        <section id="activities" class="container d-grid py-3">
+        <section id="activities" class="container-lg container-fluid d-grid mb-3">
             <h2 class="mt-3 mt-lg-0 text-primary fw-bold text-end">ACTIVITIES</h2>
-            <div class="image img_netcompany" data-aos="fade-right"><img loading="lazy"
-                    src="./images/activities/net-company.jpg" width="100%" height="100%" alt="">
+            <div class="image img_netcompany"><img loading="lazy" src="./images/activities/net-company.jpg" width="100%"
+                    height="100%" alt="">
             </div>
             <div class="desc">
                 <blockquote class="text-center fw-semibold"><i>"Netcompany Case Study"</i></blockquote>
@@ -166,8 +162,8 @@
                     experiences.</p>
                 <button class="btn btn-primary d-block ms-auto border-radius-lg text-light">Solution</button>
             </div>
-            <div class="image img_greenwich" data-aos="fade-left"><img loading="lazy"
-                    src="./images/activities/greenwich.jpg" width="100%" height="100%" alt=""></div>
+            <div class="image img_greenwich"><img loading="lazy" src="./images/activities/greenwich.jpg" width="100%"
+                    height="100%" alt=""></div>
             <div class="desc">
                 <blockquote class="text-center fw-semibold"><i>"Greenwich Experience on HTV7"</i></blockquote>
                 <p class="desc-gw">I was honored to be invited to make a reportage about my
@@ -178,8 +174,8 @@
                     confidence, I felt it strongly improved day to day.</p>
                 <button class="btn btn-primary d-block ms-auto border-radius-lg text-light">Watch it!</button>
             </div>
-            <div class="image img_kao" data-aos="fade-in"><img loading="lazy" src="./images/activities/kao.jpg"
-                    width="100%" height="100%" alt=""></div>
+            <div class="image img_kao"><img loading="lazy" src="./images/activities/kao.jpg" width="100%" height="100%"
+                    alt=""></div>
             <div class="desc">
                 <blockquote class="text-center fw-semibold"><i>"KAO Entertainment"</i></blockquote>
                 <p class="desc-kao">I played the role of music director at KAO Entertainment. KAO Entertainment is a
@@ -191,7 +187,7 @@
         </section>
 
         <!-- CERTIFICATE -->
-        <section id="certificate" class="bg-info p-3 my-5 my-lg-0">
+        <section id="certificate" class="bg-info my-5 my-md-0">
             <h2 class="text-primary text-center text-md-left fw-bold py-3">CERTIFICATE</h2>
             <div class="wrapper">
                 <ul class="certificates px-3"></ul>
@@ -199,7 +195,7 @@
         </section>
 
         <!-- EDU & EXP -->
-        <section id="eduexp" class="container pt-3">
+        <section id="eduexp" class="container">
             <h2 class="text-primary fw-bold text-center">Edu & Exp</h2>
             <ul>
                 <li>
@@ -260,13 +256,13 @@
         </section>
 
         <!-- FOOTER -->
-        <footer id="footer" class="mt-3 py-3 bg-secondary text-bg-light">
+        <footer id="footer" class="mt-3 py-3">
             <ul class="d-flex justify-content-between align-items-center px-4">
                 <li>
-                    <p class="text-center text-info m-0">©2023 TRUONG QUOC KHANH</p>
+                    <p class="text-center m-0">©2023 TRUONG QUOC KHANH</p>
                 </li>
                 <li>
-                    <blockquote class="text-center text-primary m-0"><i>"The more you grow, the more you know <br /> The
+                    <blockquote class="text-center m-0"><i>"The more you grow, the more you know <br /> The
                             more you learn,
                             the
                             more
@@ -289,8 +285,5 @@
     </div>
 </body>
 <script type="module" src="./script/main.js"></script>
-<script>
-    AOS.init();
-</script>
 
 </html>
