--- a/index.html
+++ b/index.html
@@ -43,14 +43,26 @@
 
     <!-- SOCIAL -->
     <ul id="social" class="mx-auto p-md-3">
-        <li><a target="_blank" href="https://www.linkedin.com/in/tqk/"><img src="./images/social/linkedln.svg"
-                    alt="linkedln" width="40" height="40"></a></li>
-        <li><a target="_blank" href="https://github.com/binnehaha321"><img src="./images/social/github.svg" alt="github"
-                    width="40" height="40"></a></li>
-        <li><a target="_blank" href="mailto:workhanh79@gmail.com"><img src="./images/social/gmail.svg" alt="gmail"
-                    width="40" height="40"></a></li>
-        <li><a target="_blank" href="https://www.youtube.com/@khanhtq79"><img src="./images/social/youtube.svg"
-                    alt="youtube" width="40" height="40"></a></li>
+        <li>
+            <a target="_blank" href="https://www.linkedin.com/in/tqk/">
+                <img src="./images/social/linkedln.svg" alt="linkedln" width="40" height="40">
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="https://github.com/binnehaha321">
+                <img src="./images/social/github.svg" alt="github" width="40" height="40">
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="mailto:workhanh79@gmail.com">
+                <img src="./images/social/gmail.svg" alt="gmail" width="40" height="40">
+            </a>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.youtube.com/@khanhtq79">
+                <img src="./images/social/youtube.svg" alt="youtube" width="40" height="40">
+            </a>
+        </li>
     </ul>
 
     <!-- CONTACT FORM -->
@@ -88,25 +100,27 @@
 
     <!-- HEADER -->
     <header class="container-fluid py-3">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-solid fa-house"></i>Home</a>
-            </li>
-            <li>
-                <a href="#activities"><i class="fa-solid fa-bookmark"></i>Activities</a>
-            </li>
-            <li>
-                <a href="#certificate"><i class="fa-solid fa-award"></i>Certificate</a>
-            </li>
-            <li>
-                <a href="#eduexp"><i class="fa-solid fa-graduation-cap"></i>Edu & Exp</a>
-            </li>
-        </ul>
-        <span class="bar"><i class="fa-solid fa-bars"></i></span>
-        <div class="letter-name"><span>K</span></div>
-        <div class="contact-btn"><a id="resume" target="_blank"
-                href="https://drive.google.com/drive/folders/1-8nvCmd4rz3A7iC9l5VI25UN1PoYT9Y_?usp=share_link"
-                class="btn btn-secondary border-radius-lg">My Resume</a></div>
+        <div class="wrapper container-lg px-0 px-lg-3">
+            <ul>
+                <li>
+                    <a href="#" class="active"><i class="fa-solid fa-house"></i>Home</a>
+                </li>
+                <li>
+                    <a href="#activities"><i class="fa-solid fa-bookmark"></i>Activities</a>
+                </li>
+                <li>
+                    <a href="#certificate"><i class="fa-solid fa-award"></i>Certificate</a>
+                </li>
+                <li>
+                    <a href="#eduexp"><i class="fa-solid fa-graduation-cap"></i>Edu & Exp</a>
+                </li>
+            </ul>
+            <span class="bar"><i class="fa-solid fa-bars"></i></span>
+            <div class="letter-name"><span>K</span></div>
+            <div class="contact-btn"><a id="resume" target="_blank"
+                    href="https://drive.google.com/drive/folders/1-8nvCmd4rz3A7iC9l5VI25UN1PoYT9Y_?usp=share_link"
+                    class="btn btn-secondary border-radius-lg">My Resume</a></div>
+        </div>
     </header>
 
     <div class="parent">
@@ -114,7 +128,7 @@
         <section class="container-lg container-fluid hero d-flex flex-wrap justify-content-between pt-5">
             <div class="left col-12 col-md-6 d-flex flex-column justify-content-between">
                 <div class="top">
-                    <h2>My name is <br /> <b class="text-primary">Truong Quoc Khanh</b></h2>
+                    <h2>My name is <br /> <b class="text-primary">Quoc Khanh Truong</b></h2>
                     <p>I am a Frontend developer with beloving composing music. &#10084;</p>
                     <button class="hire btn btn-primary border-radius-lg text-light my-3">Hire Me</button>
                 </div>
@@ -259,7 +273,7 @@
         <footer id="footer" class="mt-3 py-3">
             <ul class="d-flex justify-content-between align-items-center px-4">
                 <li>
-                    <p class="text-center m-0">©2023 TRUONG QUOC KHANH</p>
+                    <p class="text-center m-0">©2023 QUOC KHANH TRUONG</p>
                 </li>
                 <li>
                     <blockquote class="text-center m-0"><i>"The more you grow, the more you know <br /> The
@@ -273,7 +287,6 @@
         </footer>
     </div>
 
-
     <!-- MEDIA -->
     <div id="media">
         <iframe loading="lazy" title="" frameborder="0"
@@ -282,6 +295,14 @@
         <img alt="" loading="lazy">
         <figcaption class="text-center text-primary fw-semibold mt-3"></figcaption>
         <button class="position-fixed btn btn-danger text-light">×</button>
+    </div>
+
+    <!-- LANGUAGE -->
+    <div class="toggle-theme-wrapper">
+        <label for="toggle-theme">
+            <input id="toggle-theme" type="checkbox" hidden>
+            <div class="slider"></div>
+        </label>
     </div>
 </body>
 <script type="module" src="./script/main.js"></script>
