--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             <div class="form-container d-flex justify-content-between">
                 <form action="https://formsubmit.co/4c49adcf5c468cff0a6056e6ac0f418f" method="POST" target="_blank"
                     class="col-12 col-md-6">
-                    <input type="text" name="name" class="form-control mb-3" required placeholder="Full name">
-                    <input type="email" name="email" class="form-control mb-3" required placeholder="Email">
+                    <input type="text" name="name" class="form-control mb-3" required placeholder="Full name" tabindex="1">
+                    <input type="email" name="email" class="form-control mb-3" required placeholder="Email" tabindex="2">
                     <textarea name="message" cols="30" rows="8" class="form-control mb-3" required
-                        placeholder="Your message..."></textarea>
+                        placeholder="Your message..." tabindex="3"></textarea>
                     <button type="button" class="cancel btn btn-secondary me-3 text-capitalize">Cancel</button>
-                    <button type="submit" class="submit btn btn-primary text-light text-capitalize">Send</button>
+                    <button type="submit" class="submit btn btn-primary text-light text-capitalize" tabindex="4">Send</button>
                 </form>
                 <div class="visit-card col-12 col-md-5">
                     <ul class="information">
@@ -101,18 +101,22 @@
     <!-- HEADER -->
     <header class="container-fluid py-3">
         <div class="wrapper container-lg px-0 px-lg-3">
-            <ul>
-                <li>
-                    <a href="#" class="active"><i class="fa-solid fa-house"></i>Home</a>
+            <ul class="menu">
+                <li class="active">
+                    <i class="fa-solid fa-house"></i>
+                    <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#activities"><i class="fa-solid fa-bookmark"></i>Activities</a>
+                    <i class="fa-solid fa-bookmark"></i>
+                    <a href="#activities">Activities</a>
                 </li>
                 <li>
-                    <a href="#certificate"><i class="fa-solid fa-award"></i>Certificate</i></a>
+                    <i class="fa-solid fa-award"></i>
+                    <a href="#certificate">Certificate</i></a>
                 </li>
                 <li>
-                    <a href="#eduexp"><i class="fa-solid fa-graduation-cap"></i>Edu & Exp</a>
+                    <i class="fa-solid fa-graduation-cap"></i>
+                    <a href="#eduexp">Edu & Exp</a>
                 </li>
             </ul>
             <span class="bar"><i class="fa-solid fa-bars"></i></span>
@@ -125,8 +129,8 @@
 
     <div class="parent">
         <!-- HERO -->
-        <section class="container-lg container-fluid hero d-flex flex-wrap justify-content-between pt-5">
-            <div class="left col-12 col-md-6 d-flex flex-column justify-content-between">
+        <section id="home" class="container-lg container-fluid hero d-flex flex-wrap justify-content-between">
+            <div class="left col-12 col-lg-6 d-flex flex-column justify-content-between">
                 <div class="top">
                     <h2 class="state d-block">My name is</h2>
                     <h2 class="fullname text-primary fw-bolder d-block">Quoc Khanh Truong</h2>
@@ -152,7 +156,7 @@
                     </section>
                 </div>
             </div>
-            <div class="right col-12 col-md-6">
+            <div class="right col-12 col-lg-6">
                 <div class="avatar">
                     <img loading="lazy" src="./images/avatar.jpg" alt="avatar">
                 </div>
@@ -160,7 +164,7 @@
         </section>
 
         <!-- ACTIVITIES -->
-        <section id="activities" class="container-lg container-fluid d-grid mb-3">
+        <section id="activities" class="container-lg container-fluid d-grid pb-md-5">
             <h2 class="mt-3 mt-lg-0 text-primary fw-bold text-end">ACTIVITIES</h2>
             <div class="image img_netcompany"><img loading="lazy" src="./images/activities/net-company.jpg" width="100%"
                     height="100%" alt="">
@@ -295,7 +299,7 @@
             allowfullscreen></iframe>
         <img alt="" loading="lazy">
         <figcaption class="text-center text-primary fw-semibold mt-3"></figcaption>
-        <button class="position-fixed btn btn-danger text-light">×</button>
+        <button class="close-media btn btn-danger text-light">×</button>
     </div>
 
     <!-- THEME -->
@@ -314,6 +318,13 @@
         <button type="button" id="lang-vi" lang="vi">
             <img loading="lazy" width="48" src="./images/languages/vi.png" alt="vi" />
         </button>
+    </div>
+
+    <!-- WELCOME -->
+    <div class="welcome">
+        <div class="typed-animation">
+            <h3 class="typed-out">How are you today?</h3>
+        </div>
     </div>
 </body>
 <script type="module" src="./script/main.js"></script>
