--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <div class="parent">
         <!-- HERO -->
-        <section id="home" class="container-lg container-fluid hero d-flex flex-wrap justify-content-between">
+        <section id="home" class="container-lg container-fluid hero d-flex flex-wrap justify-content-between py-3 py-lg-5">
             <div class="left col-12 col-lg-6 d-flex flex-column justify-content-between">
                 <div class="top">
                     <h2 class="state d-block">My name is</h2>
@@ -313,10 +313,10 @@
     <!-- LANGUAGE -->
     <div id="language">
         <button type="button" id="lang-en" lang="en">
-            <img loading="lazy" width="48" src="./images/languages/en.png" alt="en" />
+            <img loading="eager" width="48" src="./images/languages/en.png" alt="en" />
         </button>
         <button type="button" id="lang-vi" lang="vi">
-            <img loading="lazy" width="48" src="./images/languages/vi.png" alt="vi" />
+            <img loading="eager" width="48" src="./images/languages/vi.png" alt="vi" />
         </button>
     </div>
 
